Control View changes added, integrated Accept/Confirm/Reject API's

--- a/sigmaCabs/app/styles/controlView.scss
+++ b/sigmaCabs/app/styles/controlView.scss
@@ -226,5 +226,9 @@
   }
   color: #333333;
   cursor: pointer;
-  margin: 10px 0;
+  margin: 0 10px;
+}
+.chevron-right {
+  float: left;
+  margin-right: 10px;
 }
