--- a/sigmaCabs/app/views/dispatch.html
+++ b/sigmaCabs/app/views/dispatch.html
@@ -1,7 +1,8 @@
 <div>
 	<div id="bookingNav" class="bookingNav historyBarContainer">
 		<ul class="bookingNav_ul clearfix">
-			<li  ng-class="(showBookingDetails) ? 'tabSelcted' : ''" ng-click="showBookingDetailsTab()">Booking</li>
+			<li  ng-class = "(showControlViewDetails) ? 'tabSelcted' : ''" ng-click = "showControlViewTab()">Control View</li>
+            <li  ng-class="(showBookingDetails) ? 'tabSelcted' : ''" ng-click="showBookingDetailsTab()">Booking</li>
 			<li  ng-class="(showMyCallBacks) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">My Callbacks</li>
 			<li  ng-class="(showMycallHistory) ? 'tabSelcted' : ''" ng-click="showMycallHistoryTab()">My Call History</li>
 			<li  ng-class="(showTariffDetails) ? 'tabSelcted' : ''" ng-click =  "showTariffDetailsTab()">Tariff</li>
