--- a/sigmaCabs/app/views/dispatches/vehiclesForBookingSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehiclesForBookingSplitView.html
@@ -5,12 +5,11 @@
 			<div class="panel-heading short-panel-heading">
 			    <span class="panel-title left">Vehicle details</span>
 				<span ng-switch on="vehicleDetailsData.vehicle.vehicleStatus" class="right">
-					<button class="btnCompact btn-success left" ng-switch-when="2" data-ng-click="">Accepted</button> <!-- fnVehicleAccepBooking() -->
-            		<button class="btnCompact btn-danger left" ng-switch-when="2" data-ng-click="">Rejected</button> <!-- fnVehicleRejectBooking() -->
+					<button class="btnCompact btn-success left" ng-switch-when="2" data-ng-click="fnControlViewVehicleAccepBooking()">Accept</button>
+            		<button class="btnCompact btn-danger left" ng-switch-when="2" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
 
-					<button ng-switch-when="4" class="btnCompact btn-success left" data-ng-click="">Confirm</button> <!-- fnVehicleConfirm() -->
-					<button ng-switch-when="4" class="btnCompact btn-danger left" data-ng-click="">Rejected</button>
-					<!-- fnVehicleRejectBooking() -->
+					<button ng-switch-when="4" class="btnCompact btn-success left" data-ng-click="fnControlViewVehicleConfirm()">Confirm</button>
+					<button ng-switch-when="4" class="btnCompact btn-danger left" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
 					<i class="glyphicon glyphicon-remove" ng-click="bookingVehicleDetailsPageCloseFn()"></i>
 					<span class="clearfix"></span>
 				</span>
