--- a/sigmaCabs/app/views/dispatch.html
+++ b/sigmaCabs/app/views/dispatch.html
@@ -1,18 +1,17 @@
 <div>
 	<div id="bookingNav" class="bookingNav historyBarContainer">
 		<ul class="bookingNav_ul clearfix">
-			<li  ng-class = "(showControlViewDetails) ? 'tabSelcted' : ''" ng-click = "showControlViewTab()">Control View</li>
-            <li  ng-class="(showBookingDetails) ? 'tabSelcted' : ''" ng-click="showBookingDetailsTab()">Booking</li>
-			<li  ng-class="(showMyCallBacks) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">My Callbacks</li>
-			<li  ng-class="(showMycallHistory) ? 'tabSelcted' : ''" ng-click="showMycallHistoryTab()">My Call History</li>
-			<li  ng-class="(showTariffDetails) ? 'tabSelcted' : ''" ng-click =  "showTariffDetailsTab()">Tariff</li>
-			<li  ng-class="(showVehicleAvailability) ? 'tabSelcted' : ''" ng-click="showVehicleAvailabilityTab()">Vehicle Availability</li>
-			<li  ng-class="(showBookingHistoryDetails) ? 'tabSelcted' : ''" ng-click="showBookingHistoryDetailsTab()">Booking History</li>
-			<li  ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Complaints &amp; feedback</li>
-			<li  ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Rating</li>
-			<li  ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Breaks</li>
-			<li  ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Chat</li>
-			<li  ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Follow Ups</li>
+			<li ng-class="(showDispatchView) ? 'tabSelcted' : ''" ng-click="showDispatchViewTab()">Dispatch</li>
+            <li ng-class="(showBookingDetails) ? 'tabSelcted' : ''" ng-click="showBookingDetailsTab()">Booking</li>
+            <li  ng-class = "(showControlViewDetails) ? 'tabSelcted' : ''" ng-click="showControlViewTab()">Control View</li>
+            <li ng-class="(showMyCallBacks) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">My Callbacks</li>
+            <li ng-class="(showMycallHistory) ? 'tabSelcted' : ''" ng-click="showMycallHistoryTab()">My Call History</li>
+            <li ng-class="(showTariffDetails) ? 'tabSelcted' : ''" ng-click="showTariffDetailsTab()">Tariff</li>
+			<li ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Complaints &amp; feedback</li>
+			<li ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Rating</li>
+			<li ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Breaks</li>
+			<li ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Chat</li>
+			<li ng-class="(showComplaints) ? 'tabSelcted' : ''" ng-click="showComplaintsTab()">Follow Ups</li>
 		</ul>
 
 	</div>
