--- a/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
@@ -47,13 +47,13 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-6">
-			<label title="Driver Rating">DR {{vehicleDetailsData.driver.rating}}</label>
+			<label title="Driver Rating">D.Rating</label>
 			<span ng-repeat="j in vehicleDetailsData.driver.aRating">
 				<span class="glyphicon {{j.cls}}"></span>
 			</span>
 		</div>
 		<div class="col-xs-6">
-			<label title="Vehicle Rating">VR {{vehicleDetailsData.vehicle.rating}}</label>
+			<label title="Vehicle Rating">V.Rating</label>
 			<span ng-repeat="j in vehicleDetailsData.vehicle.aRating">
 				<span class="glyphicon {{j.cls}}"></span>
 			</span>
