--- a/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
@@ -38,11 +38,11 @@
     <p class="clear"/>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
+        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes" disabled></select>
     </div>
     <div class="fieldContainer  relative right">
         <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="vehicleMainDetails.details.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}"></select>
+        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="vehicleMainDetails.details.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}" disabled></select>
     </div>
     <p class="clear"/>
     <!-- <div class="fieldContainer relative left">
