added reports controller

--- a/sigmaCabs/app/views/reports.html
+++ b/sigmaCabs/app/views/reports.html
@@ -1,1 +1,7 @@
-Reports landing page
+<div id="bookingNav" class="bookingNav historyBarContainer">
+	<ul class="bookingNav_ul clearfix">
+		<li ng-click="fnShowCallTakerSalaryReport()">Call-Taker Salary Report</li>
+	</ul>
+	<div data-ng-include="reportContainer"></div>
+
+</div>
