Dispatch: Current Day data changed, Added min and max for datepicker

--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -819,6 +819,13 @@ textFieldCompact[disabled] .textFieldCompact {
   margin-left: 3px;
   transform: rotate(260deg);
 }
+.currentMonthData {
+  float: left;
+  font-size: 12px;
+  height: 220px;
+  margin-right: 7px;
+  width:53.1%;
+}
 /*.chatFormDiv {
   float: left;
   fieldset {
