--- a/sigmaCabs/app/views/dispatches/controlView.html
+++ b/sigmaCabs/app/views/dispatches/controlView.html
@@ -49,7 +49,7 @@
 				  <span class="clearfix"></span>
 				</div>
 				<div class="panel-body padding-5-panel-body hide">
-				  <input type="text" datepicker ng-model="bookingInfoDate" class="" placeholder="" min="dpMinDate" max="dpMaxDate"/>
+				  <input type="text" datepicker ng-model="bookingInfoDate" class="" placeholder=""/>
 				  <button class="btnCompact btn-success" data-ng-click="setBookingInfoGrid(false)" title="Update Booking Details">Update</button>
 				</div>
 			</div>
