--- a/sigmaCabs/app/views/dispatches/vehiclePerformance.html
+++ b/sigmaCabs/app/views/dispatches/vehiclePerformance.html
@@ -1,4 +1,57 @@
-<fieldset class="">
-	<legend class="searchbox-border">Vehicle Performance</legend>
-	<div style="min-height: 200px;"></div>
+<fieldset class="" style="height:220px;">
+	<legend class="searchbox-border">Vehicle Information</legend>
+	<div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact" title="Projected Login Hours">PLH</label>
+        <span>14</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px">
+        <label class="labelCompact" title="Driver Name">D.Name</label>
+        <span>Test</span>
+    </div>
+    <p class="clear"/>
+    <div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact" title="Opted Package">OP</label>
+        <span>40,000</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px">
+        <label class="labelCompact" title="Owner Name">O.Name</label>
+        <span>Test 1</span>
+    </div>
+    <p class="clear"/>
+    <div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact" title="Attachment Type">AT</label>
+        <span title="Promoting Partner" class="ellipsisText">Promoting Partner</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px">
+        <label class="labelCompact" title="Registration Number">R.No</label>
+        <span class="ellipsisText" title="AP 09 9999">AP 09 9999</span>
+    </div>
+    <p class="clear"/>
+    <div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact" title="Driver Type">dT</label>
+        <span title="Driver cum Owner" class="ellipsisText">DCO</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px">
+        <label class="labelCompact">Model</label>
+        <span>08 - 2013</span>
+    </div>
+    <p class="clear"/>
+    <div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact" title="Home Location">HL</label>
+        <span>Mehdipatnam</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px">
+        <label class="labelCompact" title="Paper Validity">P.Val</label>
+        <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:#ff0000;"></span>
+    </div>
+    <p class="clear"/>
+    <div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact" title="Expected Login Time">ELT</label>
+        <span>10:00 to 19:00</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px">
+        <label class="labelCompact" title="Facilities">Fac..</label>
+        <span>Music System</span>
+    </div>
+    <p class="clear"/>
 </fieldset>
