added callTaker-Salary Report

--- a/sigmaCabs/app/styles/reports.scss
+++ b/sigmaCabs/app/styles/reports.scss
@@ -1,3 +1,14 @@
 .dtWidth{
 	width: 63px !important;
 }
+.searchFilter {
+	height: 40px;	
+}
+.searchFilter legend{
+	margin-bottom: 0px;	
+}
+
+.callTakerReport .fieldContainer{
+	width: 250px;
+	height: 16px;
+}
