--- a/sigmaCabs/app/views/bookings/personalForm.html
+++ b/sigmaCabs/app/views/bookings/personalForm.html
@@ -20,9 +20,9 @@
 
         <div class="fieldContainer clearBoth relative clearBoth">
             <label class="labelCompact">Search </label>
-            <input type="text" phone style="width: 70px;" ng-model="searchDetails.searchString" class="textFieldCompact"  />
-            <button class="btnCompact btn-success" data-ng-click="fnSearchCustomer();" style="width: 30px;margin: 0px 0px 0px 5px;">Go</button>            
-            <input class="smsCheckbox" type="checkbox" style="margin: 0px 0px 0px 4px !important;" value="">
+            <input type="text" phone ng-model="searchDetails.searchString" class="left textFieldCompact" style="background: #FFFDC7" />
+            <button class="btnCompact btn-success hide " data-ng-click="fnSearchCustomer();" style="width: 30px;margin: 0px 0px 0px 5px;">Go</button>            
+            <input class="left smsCheckbox" type="checkbox" value="">
         </div>
 
         <div class="fieldContainer clearBoth relative" >
