--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -714,6 +714,12 @@ textFieldCompact[disabled] .textFieldCompact {
   width: 333px;
   z-index: 1;
 }
+.fieldExpandLeft {
+  position: absolute;
+  width: 333px;
+  z-index: 1;
+  left: -248px;
+}
 .altPhoneBgContainer {
   position: absolute;
   width: 230px;
