Added cancel button on all the popup's of callTaker view

--- a/sigmaCabs/app/views/bookings/blockCustomerMain.html
+++ b/sigmaCabs/app/views/bookings/blockCustomerMain.html
@@ -37,6 +37,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveAndCloseBlockCaller()" >Save & Close</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="close()" >Cancel</button>
         </div>
     </div>
 </div>
