--- a/sigmaCabs/app/views/bookings/customerRequestMain.html
+++ b/sigmaCabs/app/views/bookings/customerRequestMain.html
@@ -151,6 +151,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveAndCloseRequest()">{{ saveText }}</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="close()">Cancel</button>
         </div>
     </div>
 </div>
