--- a/sigmaCabs/app/views/bookings/dispositionForm.html
+++ b/sigmaCabs/app/views/bookings/dispositionForm.html
@@ -42,7 +42,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveDispositionAndExit()">Save Disposition</button>
-            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="close()" >Exit</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="close()" >Cancel</button>
         </div>
     </div>
 </div>
