--- a/sigmaCabs/app/views/bookings/singleTariff.html
+++ b/sigmaCabs/app/views/bookings/singleTariff.html
@@ -121,6 +121,7 @@
         </div>
         <div class="modal-footer">            
             <button type="button" class="btn-success btnCompact" ng-click="fnConfirmTariffAndExit()">Confirm</button>
+            <button type="button" class="btn-success btnCompact" ng-click="close()">Cancel</button>
         </div>
     </div>
 </div>
